--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,12 +31,20 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.10",
+    "@angular-eslint/builder": "4.3.1",
+    "@angular-eslint/eslint-plugin": "4.3.1",
+    "@angular-eslint/eslint-plugin-template": "4.3.1",
+    "@angular-eslint/schematics": "4.3.1",
+    "@angular-eslint/template-parser": "4.3.1",
     "@angular/cli": "~11.2.10",
     "@angular/compiler-cli": "~11.2.11",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "4.16.1",
+    "@typescript-eslint/parser": "4.16.1",
     "autoprefixer": "^10.3.4",
     "codelyzer": "^6.0.0",
+    "eslint": "^7.6.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
@@ -49,6 +57,9 @@
     "tailwindcss": "^2.2.15",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-jsdoc": "latest",
+    "eslint-plugin-prefer-arrow": "latest"
   }
 }
