--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cost-calculator",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -45,6 +46,10 @@
     "autoprefixer": "^10.3.4",
     "codelyzer": "^6.0.0",
     "eslint": "^7.6.0",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-jsdoc": "latest",
+    "eslint-plugin-prefer-arrow": "latest",
+    "husky": "^4.3.8",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
@@ -52,14 +57,26 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "lint-staged": "^12.1.2",
     "postcss": "^8.3.6",
+    "prettier": "^2.5.0",
     "protractor": "~7.0.0",
     "tailwindcss": "^2.2.15",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^4.4.2",
-    "eslint-plugin-import": "latest",
-    "eslint-plugin-jsdoc": "latest",
-    "eslint-plugin-prefer-arrow": "latest"
+    "typescript": "^4.4.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged --allow-empty"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,ts,json,scss,css,md,html}": [
+      "prettier --single-quote --write"
+    ],
+    "src/**/*.{js,ts}": [
+      "eslint --fix"
+    ]
   }
 }
